--- a/groww_clone-main/index.html
+++ b/groww_clone-main/index.html
@@ -22,8 +22,14 @@
     <div id="navbar"></div>
     <div id="main"></div>
     <div id="footer"></div>
+    
     <script type="module" src="/scripts/index.js"></script>
     <script src="/scripts/stock.js"></script>
+    <script type="module" src="/scripts/innews.js"></script>
+    <script type="module" src="/scripts/topgainer.js"></script>
+    <script type="module" src="/scripts/topeloosers.js"></script>
+   
+
 </body>
 
 </html>
