--- a/groww_clone-main/login.html
+++ b/groww_clone-main/login.html
@@ -25,16 +25,18 @@
         
         </div>
             <div class="container" style="width: 50%;">
-                <form  action="" id="login" class="form" onsubmit="logIn(event)">
+                <form  action="http://localhost:4000/login" method="POST" id="login" class="form" onsubmit="logIn(event)">
                     <h1 class="form__title">Welcome Back</h1>
                     <div class="form__message form__message--error"></div>
                     <div class="form__input--gorup">
-                        <input type="text" class="form__input" autofocus placeholder="Username or Email" id="usermail">
+                        <input type="text" class="form__input" name="email" autofocus placeholder="Username or Email" id="usermail">
                         <div class="form__input-error-message"></div>
                     </div>
                     <div class="form__input--gorup">
-                    <input type="password" class="form__input" autofocus placeholder="Password" id="userpass">
+                    <input type="password" class="form__input" name="password" autofocus placeholder="Password" id="userpass">
                     <div class="form__input-error-message"></div>
+                    <input type="hidden" id="ln" name="link" value="" />
+
                 </div>
                 <button class="form__button" type="submit">Log In</button>
                 <p class="form__text">
