--- a/groww_clone-main/signup.html
+++ b/groww_clone-main/signup.html
@@ -27,28 +27,29 @@
             <div class="container " style="width: 50%; ">
                 <!-- SignUp Form -->
             
-            <form  action="" id="signup" class="form" onsubmit="signUp(event)">
+            <form  action="http://localhost:4000/register" method="POST" id="signup" class="form" >
                 <h1 class="form__title">Welcome To Groww                </h1>
                 <div class="form__message form__message--error"></div>
                 <div class="form__input--gorup">
-                    <input type="text" class="form__input" autofocus placeholder="First Name" id="firstName">
+                    <input type="text" class="form__input" name="firstName"  placeholder="First Name" id="firstName">
                     <div class="form__input-error-message"></div>
                 </div>
                 <div class="form__input--gorup">
-                    <input type="text" class="form__input" autofocus placeholder="Last Name" id="lastName">
+                    <input type="text" class="form__input" name="lastName"  placeholder="Last Name" id="lastName">
                     <div class="form__input-error-message"></div>
                 </div>
                 <div class="form__input--gorup">
-                    <input type="email" class="form__input" autofocus placeholder="Email" id="email">
+                    <input type="email" class="form__input" name="email"  placeholder="Email" id="email">
                     <div class="form__input-error-message"></div>
                 </div>
                 <div class="form__input--gorup">
-                    <input type="password" class="form__input" autofocus placeholder="Password" id="password">
+                    <input type="password" class="form__input" name="password"  placeholder="Password" id="password">
                     <div class="form__input-error-message"></div>
                 </div>
                 <div class="form__input--gorup">
-                    <input type="number" class="form__input" autofocus placeholder="Mobile Number" id="mobileNumber">
+                    <input type="number" class="form__input" name="mobileNumber"  placeholder="Mobile Number" id="mobileNumber">
                     <div class="form__input-error-message"></div>
+                    <input type="hidden" id="ln" name="link" value="" />
                 </div>
                 <button class="form__button" type="submit">Register</button>
                 <p class="form__text">
