--- a/groww_clone Prj/index.html
+++ b/groww_clone Prj/index.html
@@ -9,13 +9,13 @@
         Groww - Online Demat, Trading and Direct Mutual Fund Investment in India
     </title>
     <link rel="icon" href="https://groww.in/logo-groww270.png" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/style.css" />
-    <link rel="stylesheet" href="/styles/navbar.css">
-    <link rel="stylesheet" href="/styles/index-p.css" />
-    <link rel="stylesheet" href="/styles/index-a.css" />
-    <link rel="stylesheet" href="/styles/fd.css" />
-    <link rel="stylesheet" href="/styles/stock.css">
-    <link rel="stylesheet" href="/styles/footer.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/navbar.css">
+    <link rel="stylesheet" href="./styles/index-p.css" />
+    <link rel="stylesheet" href="./styles/index-a.css" />
+    <link rel="stylesheet" href="./styles/fd.css" />
+    <link rel="stylesheet" href="./styles/stock.css">
+    <link rel="stylesheet" href="./styles/footer.css" />
 </head>
 
 <body>
@@ -23,11 +23,11 @@
     <div id="main"></div>
     <div id="footer"></div>
     
-    <script type="module" src="/scripts/index.js"></script>
-    <script src="/scripts/stock.js"></script>
-    <script type="module" src="/scripts/innews.js"></script>
-    <script type="module" src="/scripts/topgainer.js"></script>
-    <script type="module" src="/scripts/topeloosers.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
+    <script src=".scripts/stock.js"></script>
+    <script type="module" src="./scripts/innews.js"></script>
+    <script type="module" src="./scripts/topgainer.js"></script>
+    <script type="module" src="./scripts/topeloosers.js"></script>
    
 
 </body>
