--- a/groww_clone Prj/invest.html
+++ b/groww_clone Prj/invest.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+.<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your cart | Groww</title>
     <link rel="icon" href="https://groww.in/logo-groww270.png" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/navbar.css">
-    <link rel="stylesheet" href="/styles/cart.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/navbar.css">
+    <link rel="stylesheet" href="./styles/cart.css">
     <!-- <link rel="stylesheet" href="/styles/invest.css"> -->
 </head>
 <body>
@@ -48,4 +48,4 @@
     </div>
 </body>
 </html>
-<script src="/scripts/invest.js" type="module"></script>
+<script src="./scripts/invest.js" type="module"></script>
