--- a/groww_clone Prj/cart.html
+++ b/groww_clone Prj/cart.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your cart | Groww</title>
     <link rel="icon" href="https://groww.in/logo-groww270.png" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/navbar.css">
-    <link rel="stylesheet" href="/styles/cart.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/navbar.css">
+    <link rel="stylesheet" href="./styles/cart.css">.
 </head>
 <body>
     <div id="navbar"></div>
@@ -63,4 +63,4 @@
     </div>
 </body>
 </html>
-<script src="/scripts/cart.js" type="module"></script>
+<script src="./scripts/cart.js" type="module"></script>
