--- a/groww_clone Prj/details.html
+++ b/groww_clone Prj/details.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+.<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=Device-width>, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/details.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/details.css">
 </head>
 
 <body>
@@ -77,7 +77,7 @@
 
     </div>
 
-    <script src="/scripts/details.js" type="module"></script>
+    <script src="./scripts/details.js" type="module"></script>
 </body>
 
 </html>
