--- a/groww_clone Prj/login.html
+++ b/groww_clone Prj/login.html
@@ -25,7 +25,7 @@
         
         </div>
             <div class="container" style="width: 50%;">
-                <form  action="http://localhost:4000/login" method="POST" id="login" class="form" onsubmit="logIn(event)">
+                <form  action="http://ec2-34-222-104-93.us-west-2.compute.amazonaws.com:4000/login" method="POST" id="login" class="form" onsubmit="logIn(event)">
                     <h1 class="form__title">Welcome Back</h1>
                     <div class="form__message form__message--error"></div>
                     <div class="form__input--gorup">
