--- a/groww_clone Prj/signup.html
+++ b/groww_clone Prj/signup.html
@@ -27,11 +27,7 @@
             <div class="container " style="width: 50%; ">
                 <!-- SignUp Form -->
             
-<<<<<<< Updated upstream
-            <form  action="http://localhost:4000/register" method="POST" id="signup" class="form" >
-=======
-            <form  action="http://localhost:4000/register" method="post" id="signup" class="form" onsubmit="signUp(event)">
->>>>>>> Stashed changes
+            <form  action="http://ec2-34-222-104-93.us-west-2.compute.amazonaws.com:4000/register" method="POST" id="signup" class="form" >
                 <h1 class="form__title">Welcome To Groww                </h1>
                 <div class="form__message form__message--error"></div>
                 <div class="form__input--gorup">
